--- a/src/components/myProgress/myProgress.css
+++ b/src/components/myProgress/myProgress.css
@@ -1,12 +1,62 @@
-main {
-  display: flex;
-  height: 100vh;
-  flex-flow: wrap;
-  align-items: center;
-  justify-content: center;
-  background-color: #222;
+.popover-title {
+  color: white;
+  background-color: black;
 }
 
-.myProgressLink {
-  display: block;
+.popover {
+  width: 100%;
+  max-width: 350px;
+  min-width: 40%;
+  padding: 0px;
+  background-color: #EBEBEB;
 }
+
+.popOverContainer {
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+}
+.infoIcon {
+  width: 15px;
+  height: 15px;
+  display: inline;
+  margin-right: 1%;
+}
+
+.targetText {
+  padding-top: 9px;
+}
+
+
+
+.tooltip{ 
+  position:relative;
+  float:right;
+}
+.tooltip > .tooltip-inner {background-color: #eebf3f; padding:5px 15px; color:rgb(23,44,66); font-weight:bold; font-size:13px;}
+.popOver + .tooltip > .tooltip-arrow {	border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #eebf3f;}
+
+.progress{
+  border-radius:0;
+  overflow:visible;
+}
+.progress-bar{
+   background:#28a745; 
+  -webkit-transition: width 1.5s ease-in-out;
+  transition: width 1.5s ease-in-out;
+  width: 0%;
+}
+
+.progressWrapper {
+  width: 80%;
+  height: 150px;
+}
+/*
+.progress-bar::after { 
+  content: " > Remember this";
+}*/
