--- a/src/components/myProgress/myProgress.css
+++ b/src/components/myProgress/myProgress.css
@@ -12,14 +12,26 @@
 }
 
 .popOverContainer {
+  padding-top: 2rem;
   border: 1px solid black;
   border-radius: 10px;
   background-color: #fff;
 }
 
+.progressContent {
+  margin-bottom: 2rem;
+  display: flex;
+  flex: 1;
+  flex-flow: row;
+  justify-content: center;
+  font-weight: 600;
+}
+
 footer {
   width: 100%;
   text-align: center;
+  font-weight: 600;
+  color: #797979;  
 }
 .infoIcon {
   width: 15px;
@@ -28,28 +40,56 @@ footer {
   margin-right: 1%;
 }
 
-.targetText {
+.tooltipText {
   padding-top: 9px;
 }
 
+.progressLabel {
+  margin-top: 1.5em;
+  margin-right: 0.5em;
+  color: #4d4d4d;
+}
 
+.target {
+  padding: 1%;
+  padding-top: 1em;
+  background-color: #929292;
+  color: #fff;
+  line-height: 0.5em;
+  text-align: center;
+  border: 1px solid black;
+}
 
 .tooltip{ 
   position:relative;
   float:right;
+  top: 17px;
+  left: 27px;
 }
-.tooltip > .tooltip-inner {background-color: #eebf3f; padding:5px 15px; color:rgb(23,44,66); font-weight:bold; font-size:13px;}
-.popOver + .tooltip > .tooltip-arrow {	border-left: 5px solid transparent; border-right: 5px solid transparent; border-top: 5px solid #eebf3f;}
+.tooltip > .tooltip-inner {
+  background-color:transparent;
+   padding:5px 15px; 
+   color:#000; 
+   font-weight:bold; font-size:13px;}
+.popOver + .tooltip > .tooltip-arrow 
+{	
+  border-left: 5px solid transparent; 
+  border-right: 5px solid transparent; 
+  border-top: 5px solid #eebf3f;
+}
 
-.progress{
+.progress {
   border-radius:0;
   overflow:visible;
+  width: 50%;
+  /*Margin top used as special case cuz padding can disrupt internal layout*/
+  margin-top: 1.3em;
 }
 .progress-bar{
    background:#28a745; 
   -webkit-transition: width 1.5s ease-in-out;
   transition: width 1.5s ease-in-out;
-  width: 0%;
+  width: 45%;
 }
 
 .progressWrapper {
